# CMakeList.txt : CMake project for Fluid3D, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (Fluid3D "Fluid3D.cpp" "Fluid3D.h" "Source1.cpp")

# TODO: Add tests and install targets if needed.
